# osrm_for_qgis

./: .gitignore  README.md  bars_instructions.txt  ias_instructions.txt
plugin/osrm/: __init__.py  _cursor_tool.py  _external_config.py  _feature_tool.py  _settings.py  metadata.txt  osrm.py  test_results_dialog.py  test_results_dialog.ui  test_settings_dialog.py  test_settings_dialog.ui
test-app/: CMakeLists.txt  main.cpp
